2021/09/29	Removal of the translation-related comments.
		(Belatedly) removing redundant arithmetic generated originally by the f2c translator.
		Reconciliation involving minor structural changes.
2021/09/30	The remaining bugs in the data block initialization were repaired in both the C99 and Fortran 2018 versions.
		The remaining inconsistencies affected words that start in ‟INTO⋯”, ‟CLAY⋯”, ‟CRIMIN⋯”.
		The other inconsistencies that affected words starting in ‟HOURS⋯” and ‟PAPER⋯” were already repaired (2021/09/17).
		C1991 and Fortran/C2021 disagree on handling words starting in ‟PILE⋯”: resolved in favor of C1991.
2021/10/01	Simplifications to ‟dinit.{c,f}” (‟dirmax”/‟DIRMAX” and ‟recno”/‟RECNO” are unused and were removed).
2021/10/02	Recompilation of the history log.
2021/10/03	Lifting type ‟Bool” to ‟bool”, except for the parameters and global variables involved in I/O:
		∙	/play/ Bool telflg;
		∙	/cevent/ Bool cflag[25];
		∙	/hack/ Bool thfflg, thfact, swdact;
		∙	/findex/ Bool flags[46];
		∙	void GetFlags(int Lim, Bool *FlagP, FILE *InF);
2021/10/03	Split /findex/ into /findex_0/ for Bool and /findex_1/ for int.
		Reduced /findex/ flags to findex_0, and /findex/ switch_ to findex_1
		Reduced /curxt/ xflag to curxt.xobj and /rooms/ rrand to rooms.rval
		The other equivalences cannot be directly translated into C, but only into C++, using reference types.
2021/10/05	Minor bug fix in rooms.{f,c}.
2021/10/06	Reconciling the Makefiles between the 1991 and 2021 translations.
2021/10/06	Upgrading ‟readit.c” to a decompiler for both ‟dindx.dat” and ‟dtext.dat”,
		as a precursor to reconciling the database files with the ‟dtextc.dat” from the 1991 translation
		and making a compiler for the database files.
2021/10/07	Adding ‟readit.c” to the 1991 C translation and reconciling with the 2021 translation.
		This might be remade into a run-time compiler to make possible dynamic databases and worlds.