@@ -264,32 +264,32 @@ L10000:
 #endif
    state.mxscor = GetWord(IndexF), star.strbit = GetWord(IndexF), state.egmxsc = GetWord(IndexF);
    rooms.rlnt = GetWord(IndexF);
-   rooms.rdesc2 = GetWord(IndexF), GetWords(rmax, rooms.rdesc1, IndexF);
-   GetWords(rmax, rooms.rexit, IndexF), GetWords(rmax, rooms.ractio, IndexF);
-   GetWords(rmax, rooms.rval, IndexF), GetWords(rmax, rooms.rflag, IndexF);
-   exits.xlnt = GetWord(IndexF), GetWords(xmax, exits.travel, IndexF);
+   rooms.rdesc2 = GetWord(IndexF), GetWords(rooms.rlnt, rooms.rdesc1, IndexF);
+   GetWords(rooms.rlnt, rooms.rexit, IndexF), GetWords(rooms.rlnt, rooms.ractio, IndexF);
+   GetWords(rooms.rlnt, rooms.rval, IndexF), GetWords(rooms.rlnt, rooms.rflag, IndexF);
+   exits.xlnt = GetWord(IndexF), GetWords(exits.xlnt, exits.travel, IndexF);
    objcts.olnt = GetWord(IndexF);
-   GetWords(omax, objcts.odesc1, IndexF), GetWords(omax, objcts.odesc2, IndexF);
-   GetWords(omax, objcts.odesco, IndexF), GetWords(omax, objcts.oactio, IndexF);
-   GetWords(omax, objcts.oflag1, IndexF), GetWords(omax, objcts.oflag2, IndexF);
-   GetWords(omax, objcts.ofval, IndexF), GetWords(omax, objcts.otval, IndexF);
-   GetWords(omax, objcts.osize, IndexF), GetWords(omax, objcts.ocapac, IndexF);
-   GetWords(omax, objcts.oroom, IndexF), GetWords(omax, objcts.oadv, IndexF);
-   GetWords(omax, objcts.ocan, IndexF), GetWords(omax, objcts.oread, IndexF);
+   GetWords(objcts.olnt, objcts.odesc1, IndexF), GetWords(objcts.olnt, objcts.odesc2, IndexF);
+   GetWords(objcts.olnt, objcts.odesco, IndexF), GetWords(objcts.olnt, objcts.oactio, IndexF);
+   GetWords(objcts.olnt, objcts.oflag1, IndexF), GetWords(objcts.olnt, objcts.oflag2, IndexF);
+   GetWords(objcts.olnt, objcts.ofval, IndexF), GetWords(objcts.olnt, objcts.otval, IndexF);
+   GetWords(objcts.olnt, objcts.osize, IndexF), GetWords(objcts.olnt, objcts.ocapac, IndexF);
+   GetWords(objcts.olnt, objcts.oroom, IndexF), GetWords(objcts.olnt, objcts.oadv, IndexF);
+   GetWords(objcts.olnt, objcts.ocan, IndexF), GetWords(objcts.olnt, objcts.oread, IndexF);
    oroom2_.r2lnt = GetWord(IndexF);
-   GetWords(r2max, oroom2_.oroom2, IndexF), GetWords(r2max, oroom2_.rroom2, IndexF);
+   GetWords(oroom2_.r2lnt, oroom2_.oroom2, IndexF), GetWords(oroom2_.r2lnt, oroom2_.rroom2, IndexF);
    cevent.clnt = GetWord(IndexF);
-   GetWords(cmax, cevent.ctick, IndexF), GetWords(cmax, cevent.cactio, IndexF);
-   GetFlags(cmax, cevent.cflag, IndexF);
-   vill.vlnt = GetWord(IndexF), GetWords(vmax, vill.villns, IndexF);
-   GetWords(vmax, vill.vprob, IndexF), GetWords(vmax, vill.vopps, IndexF);
-   GetWords(vmax, vill.vbest, IndexF), GetWords(vmax, vill.vmelee, IndexF);
-   advs.alnt = GetWord(IndexF), GetWords(amax, advs.aroom, IndexF);
-   GetWords(amax, advs.ascore, IndexF), GetWords(amax, advs.avehic, IndexF);
-   GetWords(amax, advs.aobj, IndexF), GetWords(amax, advs.aactio, IndexF);
-   GetWords(amax, advs.astren, IndexF), GetWords(amax, advs.aflag, IndexF);
+   GetWords(cevent.clnt, cevent.ctick, IndexF), GetWords(cevent.clnt, cevent.cactio, IndexF);
+   GetFlags(cevent.clnt, cevent.cflag, IndexF);
+   vill.vlnt = GetWord(IndexF), GetWords(vill.vlnt, vill.villns, IndexF);
+   GetWords(vill.vlnt, vill.vprob, IndexF), GetWords(vill.vlnt, vill.vopps, IndexF);
+   GetWords(vill.vlnt, vill.vbest, IndexF), GetWords(vill.vlnt, vill.vmelee, IndexF);
+   advs.alnt = GetWord(IndexF), GetWords(advs.alnt, advs.aroom, IndexF);
+   GetWords(advs.alnt, advs.ascore, IndexF), GetWords(advs.alnt, advs.avehic, IndexF);
+   GetWords(advs.alnt, advs.aobj, IndexF), GetWords(advs.alnt, advs.aactio, IndexF);
+   GetWords(advs.alnt, advs.astren, IndexF), GetWords(advs.alnt, advs.aflag, IndexF);
    star.mbase = GetWord(IndexF);
-   rmsg.mlnt = GetWord(IndexF), GetWords(mmax, rmsg.rtext, IndexF);
+   rmsg.mlnt = GetWord(IndexF), GetWords(rmsg.mlnt, rmsg.rtext, IndexF);
 
    fclose(IndexF);
 // 						!INIT DONE.
