@@ -196,16 +196,6 @@
  -1991
      0
      0
-     0
-     0
-     0
-     0
-     0
-     0
-     0
-     0
-     0
-     0
      1
      5
     10
@@ -400,16 +390,6 @@
      0
      0
      0
-     0
-     0
-     0
-     0
-     0
-     0
-     0
-     0
-     0
-     0
      1
      2
      0
@@ -596,16 +576,6 @@
      0
     59
     60
-     0
-     0
-     0
-     0
-     0
-     0
-     0
-     0
-     0
-     0
      5
      0
      0
@@ -793,16 +763,6 @@
      0
      0
     35
-     0
-     0
-     0
-     0
-     0
-     0
-     0
-     0
-     0
-     0
      0
      0
      0
@@ -996,16 +956,6 @@
  24576
  24576
  24576
-     0
-     0
-     0
-     0
-     0
-     0
-     0
-     0
-     0
-     0
    886
   3155
   7178
@@ -1893,20 +1843,6 @@
      0
   3616
      0
-     0
-     0
-     0
-     0
-     0
-     0
-     0
-     0
-     0
-     0
-     0
-     0
-     0
-     0
    216
  -2185
  -2186
@@ -2124,10 +2060,6 @@
      0
  -2302
      0
-     0
-     0
-     0
-     0
  -2303
  -2304
  -2305
@@ -2344,10 +2276,6 @@
  -2511
  -2512
  -2513
-     0
-     0
-     0
-     0
  -2514
      0
      0
@@ -2536,10 +2464,6 @@
      0
      0
  -2561
-     0
-     0
-     0
-     0
      0
      0
      0
@@ -2784,10 +2708,6 @@
      0
    128
    131
-     0
-     0
-     0
-     0
 -24432
 -23552
 -23552
@@ -3004,10 +2924,6 @@
 -32256
 -32736
 -32256
-     0
-     0
-     0
-     0
      0
      0
      0
@@ -3229,10 +3145,6 @@
      0
      0
      0
-     0
-     0
-     0
-     0
      5
      0
     10
@@ -3416,10 +3328,6 @@
      0
      0
     15
-     0
-     0
-     0
-     0
      0
      0
      0
@@ -3664,10 +3572,6 @@
      0
      0
      0
-     0
-     0
-     0
-     0
      3
      5
      5
@@ -3884,10 +3788,6 @@
      0
      0
      0
-     0
-     0
-     0
-     0
     15
      0
      0
@@ -4075,10 +3975,6 @@
      0
      0
      4
-     0
-     0
-     0
-     0
      0
      0
      0
@@ -4323,14 +4219,6 @@
      0
      0
    178
-     0
-     0
-     0
-     0
-     0
-     0
-     0
-     0
      0
      0
      0
@@ -4804,10 +4692,6 @@
      0
      0
      0
-     0
-     0
-     0
-     0
  -2562
      0
      0
@@ -4984,10 +4868,6 @@
      0
      0
      0
-     0
-     0
-     0
-     0
     15
     63
     65
@@ -5004,11 +4884,6 @@
    174
    175
    189
-     0
-     0
-     0
-     0
-     0
      6
     36
      9
@@ -5024,11 +4899,6 @@
    186
    184
    189
-     0
-     0
-     0
-     0
-     0
     24
      0
      0
@@ -5049,7 +4919,6 @@
      0
      5
     12
-     0
      0
      0
      0
@@ -5079,7 +4948,6 @@
     22
     23
     24
-     0
  F
  T
  F
@@ -5103,7 +4971,6 @@
  F
  T
  T
- F
  F
      3
     19
@@ -5115,17 +4982,12 @@
      0
      0
      0
-     0
-     0
-     0
     14
     13
-     0
      0
      4
      5
      3
-     0
      3
      2
    138
@@ -5136,22 +4998,15 @@
      0
      0
      0
-     0
-     0
-     0
    193
    142
    215
      0
-     0
      1
      2
      0
-     0
      3
      3
-     0
-     0
      0
      0
      0
@@ -6975,5 +6830,3 @@
  -2966
  -2967
  -2968
-     0
-     0
