@@ -252,17 +252,21 @@ C	OPEN(UNIT=STORYCH,file='/usr/share/games/dungeon/dtext.dat',
 D	PRINT 150
 D150	FORMAT('RESTORING FROM "dindx.dat"')
 	READ(1,130) MXSCOR,STRBIT,EGMXSC
-	READ(1,130) RLNT,RDESC2,RDESC1,REXIT,RACTIO,RVAL,RFLAG
-	READ(1,130) XLNT,TRAVEL
-	READ(1,130) OLNT,ODESC1,ODESC2,ODESCO,OACTIO,OFLAG1,OFLAG2,
-     &	OFVAL,OTVAL,OSIZE,OCAPAC,OROOM,OADV,OCAN,
-     &	OREAD
-	READ(1,130) R2LNT,OROOM2,RROOM2
-	READ(1,130) CLNT,CTICK,CACTIO
-	READ(1,135) CFLAG
-	READ(1,130) VLNT,VILLNS,VPROB,VOPPS,VBEST,VMELEE
-	READ(1,130) ALNT,AROOM,ASCORE,AVEHIC,AOBJ,AACTIO,ASTREN,AFLAG
-	READ(1,130) MBASE,MLNT,RTEXT
+	READ(1,130) RLNT,RDESC2,RDESC1(1:RLNT),REXIT(1:RLNT),
+     &	RACTIO(1:RLNT),RVAL(1:RLNT),RFLAG(1:RLNT)
+	READ(1,130) XLNT,TRAVEL(1:XLNT)
+	READ(1,130) OLNT,ODESC1(1:OLNT),ODESC2(1:OLNT),ODESCO(1:OLNT),
+     &	OACTIO(1:OLNT),OFLAG1(1:OLNT),OFLAG2(1:OLNT),OFVAL(1:OLNT),
+     &	OTVAL(1:OLNT),OSIZE(1:OLNT),OCAPAC(1:OLNT),OROOM(1:OLNT),
+     &	OADV(1:OLNT),OCAN(1:OLNT),OREAD(1:OLNT)
+	READ(1,130) R2LNT,OROOM2(1:R2LNT),RROOM2(1:R2LNT)
+	READ(1,130) CLNT,CTICK(1:CLNT),CACTIO(1:CLNT)
+	READ(1,135) CFLAG(1:CLNT)
+	READ(1,130) VLNT,VILLNS(1:VLNT),VPROB(1:VLNT),VOPPS(1:VLNT),
+     &	VBEST(1:VLNT),VMELEE(1:VLNT)
+	READ(1,130) ALNT,AROOM(1:ALNT),ASCORE(1:ALNT),AVEHIC(1:ALNT),
+     &	AOBJ(1:ALNT),AACTIO(1:ALNT),ASTREN(1:ALNT),AFLAG(1:ALNT)
+	READ(1,130) MBASE,MLNT,RTEXT(1:MLNT)
 C
 	CLOSE(1)
 	GO TO 1025
