@@ -121,8 +121,8 @@ C
 	DATA XNORTH/O'2000'/,XSOUTH/O'12000'/,XENTER/O'32000'/,
      &XEXIT/O'34000'/
 	DATA XEAST/O'6000'/,XWEST/O'16000'/
-	DATA XRMASK/O'377'/,XDMASK/O'76000'/,XFMASK/3/
-	DATA XFSHFT/256/,XASHFT/256/
+	DATA XRMASK/Z'FF'/,XDMASK/Z'7C00'/,XFMASK/Z'03'/
+	DATA XFSHFT/Z'100'/,XASHFT/Z'100'/
 	DATA XELNT/1,2,3,3/
 	DATA XNORM/1/,XNO/2/,XCOND/3/,XDOOR/4/,XLFLAG/Z'8000'/
 C
